--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "keywords": [
     "interledger",
     "ilp",
-    "interactive",
-    "itp",
+    "payment request",
+    "ipr",
     "crypto",
     "condition",
     "five-bells-condition",
