--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "debug": "^2.2.0",
     "eventemitter2": "^2.0.0",
     "ilp-core": "^11.0.0",
+    "ilp-plugin-bells": "^10.0.1",
     "moment": "^2.14.1",
+    "superagent": "^3.4.0",
     "uuid": "^3.0.0"
   },
   "devDependencies": {
@@ -63,6 +65,7 @@
     "md-toc-filter": "^0.9.0",
     "mocha": "^2.5.3",
     "mock-require": "^1.3.0",
+    "nock": "^9.0.2",
     "sinon": "^1.17.4",
     "sinon-as-promised": "^3.0.1",
     "sinon-chai": "^2.8.0",
