--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp#readme",
   "dependencies": {
-    "aguid": "^1.0.4",
     "bignumber.js": "^2.4.0",
-    "canonical-json": "0.0.4",
     "debug": "^2.2.0",
-    "eventemitter2": "^2.0.0",
-    "ilp-packet": "~1.1.1",
+    "ilp-packet": "^1.1.1",
     "moment": "^2.14.1",
+    "parse-headers": "^2.0.1",
     "superagent": "^3.4.0",
     "uuid": "^3.0.0"
   },
@@ -54,6 +52,7 @@
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "eventemitter2": "^2.0.0",
     "five-bells-integration-test-loader": "^1.0.0",
     "ghooks": "^1.3.2",
     "ilp-plugin-bells": "^12.0.0",
