--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "bignumber.js": "^2.4.0",
     "co": "^4.6.0",
     "debug": "^2.2.0",
-    "ilp-packet": "^1.1.1",
+    "ilp-packet": "~1.2.0",
     "moment": "^2.14.1",
+    "oer-utils": "^1.3.2",
     "parse-headers": "^2.0.1",
     "superagent": "^3.4.0",
     "uuid": "^3.0.0"
