--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ILP client library for sending and receiving payments",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src/**/*.js",
+    "lint": "eslint .",
     "test": "istanbul test -- _mocha",
     "docs:api": "jsdoc2md --global-index-format none \"src/**/*.js\" --template docs/README.template.md > docs/README.intermediate.md",
     "docs:toc": "md-toc-filter docs/README.intermediate.md > README.md",
@@ -34,10 +34,9 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp#readme",
   "dependencies": {
-    "bignumber.js": "^2.4.0",
-    "co": "^4.6.0",
-    "debug": "^2.2.0",
-    "ilp-packet": "~1.3.0",
+    "bignumber.js": "^5.0.0",
+    "debug": "^3.1.0",
+    "ilp-packet": "~1.5.0",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.2",
     "parse-headers": "^2.0.1",
@@ -45,29 +44,24 @@
     "uuid": "^3.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "co-mocha": "^1.1.2",
-    "custom-error-instance": "^2.1.1",
-    "cz-conventional-changelog": "^1.1.6",
-    "eslint": "^3.1.1",
-    "eslint-config-standard": "^5.3.5",
-    "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "eventemitter2": "^2.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eventemitter2": "^5.0.0",
     "five-bells-integration-test-loader": "^1.3.0",
-    "ghooks": "^1.3.2",
+    "ghooks": "^2.0.2",
     "istanbul": "^0.4.4",
-    "jsdoc-to-markdown": "^1.3.6",
+    "jsdoc-to-markdown": "^3.0.2",
     "lodash": "^4.13.1",
     "md-toc-filter": "^0.9.0",
-    "mocha": "^2.5.3",
-    "mock-require": "^1.3.0",
+    "mocha": "^4.0.1",
     "nock": "^9.0.2",
-    "sinon": "^1.17.4",
-    "sinon-as-promised": "^3.0.1",
-    "sinon-chai": "^2.8.0",
-    "timekeeper": "^0.1.1",
     "validate-commit-msg": "^2.6.1"
   },
   "config": {
