--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bignumber.js": "^2.4.0",
     "co": "^4.6.0",
     "debug": "^2.2.0",
+    "ilp-compat-plugin": "git+https://github.com/interledgerjs/ilp-compat-plugin.git",
     "ilp-packet": "~1.3.0",
     "long": "^3.2.0",
     "moment": "^2.14.1",
