--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "ilp-compat-plugin": "git+https://github.com/interledgerjs/ilp-compat-plugin.git",
-    "ilp-packet": "~1.3.0",
+    "ilp-packet": "^2.0.0",
     "long": "^3.2.0",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.2",
