--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "debug": "^3.1.0",
-    "ilp-packet": "~1.5.0",
+    "extensible-error": "^1.0.2",
+    "ilp-packet": "^2.0.0",
+    "ilp-compat-plugin": "interledgerjs/ilp-compat-plugin#refactor/st-lpi2-changes",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.2",
     "parse-headers": "^2.0.1",
@@ -62,6 +64,7 @@
     "md-toc-filter": "^0.9.0",
     "mocha": "^4.0.1",
     "nock": "^9.0.2",
+    "sinon": "^4.1.3",
     "validate-commit-msg": "^2.6.1"
   },
   "config": {
