--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "debug": "^3.1.0",
     "extensible-error": "^1.0.2",
     "ilp-compat-plugin": "^2.0.3",
-    "ilp-packet": "^2.1.0",
+    "ilp-packet": "^2.1.2",
+    "ilp-protocol-ildcp": "^1.0.0",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.4",
     "parse-headers": "^2.0.1",
@@ -65,6 +66,7 @@
     "mocha": "^4.0.1",
     "nock": "^9.0.2",
     "sinon": "^4.1.3",
+    "source-map-support": "^0.5.0",
     "validate-commit-msg": "^2.6.1"
   },
   "config": {
