--- a/package.json
+++ b/package.json
@@ -59,11 +59,12 @@
     "eventemitter2": "^5.0.0",
     "five-bells-integration-test-loader": "^1.3.0",
     "ghooks": "^2.0.2",
-    "nyc": "^11.4.1",
+    "ilp-plugin-btp": "^1.1.9",
     "jsdoc-to-markdown": "^3.0.4",
     "md-toc-filter": "^0.9.0",
     "mocha": "^4.0.1",
     "nock": "^9.0.2",
+    "nyc": "^11.4.1",
     "sinon": "^4.1.3",
     "source-map-support": "^0.5.0",
     "validate-commit-msg": "^2.6.1"
