--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ilp-compat-plugin": "^2.0.3",
     "ilp-packet": "^2.2.0",
     "ilp-protocol-ildcp": "^1.0.0",
+    "ilp-protocol-lt": "github:interledgerjs/ilp-protocol-lt",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.4",
     "parse-headers": "^2.0.1",
@@ -59,8 +60,6 @@
     "eventemitter2": "^5.0.0",
     "five-bells-integration-test-loader": "^1.3.0",
     "ghooks": "^2.0.2",
-    "ilp-plugin-btp": "^1.1.9",
-    "ilp-plugin-mini-accounts": "^3.4.3",
     "jsdoc-to-markdown": "^3.0.4",
     "md-toc-filter": "^0.9.0",
     "mocha": "^4.0.1",
