--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ilp-compat-plugin": "^2.0.3",
     "ilp-packet": "^2.2.0",
     "ilp-protocol-ildcp": "^1.0.0",
-    "ilp-protocol-lt": "github:interledgerjs/ilp-protocol-lt",
+    "ilp-protocol-lt": "^1.0.0",
     "moment": "^2.14.1",
     "oer-utils": "^1.3.4",
     "parse-headers": "^2.0.1",
