Update README, add utility functions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,12 @@ jobs:
     steps:
 
       - run:
-          name: Setup NPM for global installs to home directory
-          command: npm set prefix=$HOME/npm
+          # By default node is installed as root and we are running as circleci
+          # Using sudo causes wierd issues so we just switch to installing globals in our home dir
+          name: Setup NPM to make global installs to home directory
+          command: | 
+            echo "export PATH=$HOME/bin:$PATH" >> $BASH_ENV
+            npm set prefix=$HOME
 
       - checkout
 
@@ -33,7 +37,7 @@ jobs:
 
       - run:
           name: Update Lockfile (Greenkeeper)
-          command: $HOME/npm/bin/greenkeeper-lockfile-update
+          command: greenkeeper-lockfile-update
           
       - run:
           name: Install
@@ -43,13 +47,13 @@ jobs:
           name: Test
           command: npm test
 
-      - run:
-          name: Integration Test
-          command: if git log -1 --pretty=%B | grep -qF "[skip tests]"; then true; else npm run integration; fi
+#      - run:
+#          name: Integration Test
+#          command: if git log -1 --pretty=%B | grep -qF "[skip tests]"; then true; else npm run integration; fi
      
       - run:
           name: Upload Lockfile (Greenkeeper)
-          command: $HOME/npm/bin/greenkeeper-lockfile-upload
+          command: greenkeeper-lockfile-upload
 
       - save_cache:
           paths:
