--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "ilp",
   "version": "14.0.0",
   "description": "ILP client library for sending and receiving payments",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "build": "tsc --project .",
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --fix --project .",
     "test": "istanbul test -- _mocha",
     "integration": "integration-loader && integration all"
   },
@@ -29,12 +32,16 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp#readme",
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "@types/lodash.camelcase": "^4.3.4",
+    "@types/node": "^10.9.3",
+    "@types/node-fetch": "^2.1.2",
+    "bignumber.js": "^7.2.1",
     "ilp-logger": "^1.0.2",
     "ilp-packet": "^3.0.0",
-    "ilp-plugin": "^3.1.1",
+    "ilp-plugin-btp": "^1.2.0",
     "ilp-protocol-ildcp": "^1.0.0",
-    "ilp-protocol-spsp": "^2.1.0",
-    "ilp-protocol-stream": "^1.5.3"
+    "ilp-protocol-stream": "^1.6.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -46,7 +53,10 @@
     "eslint-plugin-standard": "^3.1.0",
     "five-bells-integration-test-loader": "^1.5.3",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^7.1.0",
+    "typescript": "^3.0.3"
   },
   "config": {
     "five-bells-integration-test-loader": {
