--- a/package.json
+++ b/package.json
@@ -2,14 +2,27 @@
   "name": "ilp",
   "version": "14.0.0",
   "description": "ILP client library for sending and receiving payments",
-  "main": "src/index.js",
+  "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
+  "files": [
+    "src/lib/**/*.ts",
+    "build/lib/**/*.js",
+    "build/lib/**/*.js.map",
+    "build/lib/**/*.d.ts",
+    "build/doc"
+  ],
   "scripts": {
-    "postinstall": "npm run build",
-    "build": "tsc --project .",
+    "clean": "rm -Rf .nyc_output && rm -Rf coverage && rm -Rf doc && rm -Rf build ",
+    "build": "tsc",
     "lint": "tslint --project .",
-    "lint:fix": "tslint --fix --project .",
-    "test": "istanbul test -- _mocha",
-    "integration": "integration-loader && integration all"
+    "pretest": "tsc --build",
+    "test": "nyc mocha --ui mocha-typescript --require source-map-support/register --recursive dist/test",
+    "doc": "typedoc --options typedoc.js src/lib/index.ts",
+    "codecov": "codecov",
+    "preversion": "npm run lint && npm test",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags",
+    "prepublishOnly": "npm run lint && npm test && npm run doc"
   },
   "engines": {
     "node": ">=8"
@@ -33,30 +46,42 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp#readme",
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/lodash.camelcase": "^4.3.4",
-    "@types/node": "^10.9.3",
-    "@types/node-fetch": "^2.1.2",
+    "@types/agent-base": "^4.2.0",
+    "@types/base64-url": "^2.2.0",
+    "agent-base": "^4.2.1",
+    "base64-url": "^2.2.0",
     "bignumber.js": "^7.2.1",
-    "ilp-logger": "^1.0.2",
+    "debug": "^4.0.1",
+    "ilp-module-loader": "^0.3.2",
     "ilp-packet": "^3.0.0",
-    "ilp-plugin-btp": "^1.2.1",
+    "ilp-plugin-btp": "^1.3.2",
     "ilp-protocol-ildcp": "^2.0.0",
-    "ilp-protocol-stream": "^1.8.0"
+    "ilp-protocol-stream": "^1.8.0",
+    "supports-color": "^5.5.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.9.4",
+    "@types/node-fetch": "^2.1.2",
+    "@types/sax": "^1.0.1",
+    "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
-    "eslint": "^5.4.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "chai-as-promised": "^7.1.1",
+    "codecov": "^3.0.2",
     "five-bells-integration-test-loader": "^1.5.3",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.14",
+    "nyc": "^12.0.2",
+    "sax": "^1.2.4",
+    "sinon": "^6.0.1",
+    "source-map-support": "^0.5.9",
     "tslint": "^5.11.0",
-    "tslint-config-standard": "^7.1.0",
+    "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.12.0",
     "typescript": "^3.0.3"
   },
   "config": {
@@ -72,10 +97,10 @@
     "functions": 80,
     "branches": 80,
     "include": [
-      "src/**/*.js"
+      "build/lib/**/*.js"
     ],
     "exclude": [
-      "test/**/*.js"
+      "build/test/**/*.js"
     ],
     "reporter": [
       "lcov",
